--- a/environment.yml
+++ b/environment.yml
@@ -7,3 +7,9 @@ dependencies:
 - cartopy >=0.18.0
 - pandas >=1.1.2
 - geopy >= 2.0.0
+- geographiclib 
+- shapely 
+- h5py 
+- tqdm 
+- fortran-compiler
+- rf
