--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,14 @@
 name: Jupyter-seismology
 channels:
-- conda-forge
+  - conda-forge
 dependencies:
-- python =3
-- obspy >=1.2.0
-- pandas >=1.1.2
-- geopy >= 2.0.0
-- shapely >= 1.7.1
-- cartopy >=0.18.0
+  - python =3
+  - obspy >=1.2.0
+  - pandas >=1.1.2
+  - geopy >= 2.0.0
+  - shapely >= 1.7.1
+  - cartopy >=0.18.0
+  - pip
+  - pip:
+    - rf
 
